themedir = join_paths(get_option('datadir'), 'icons/hicolor')

install_data('hicolor/scalable/apps/org.pitivi.Pitivi.svg', install_dir: join_paths(themedir, 'scalable/apps'))
install_data('hicolor/scalable/mimetypes/text-x-xges.svg', install_dir: join_paths(themedir, 'scalable/mimetypes'))
install_data('hicolor/symbolic/apps/org.pitivi.Pitivi-symbolic.svg', install_dir: join_paths(themedir, 'symbolic/apps'))
