pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	busy.gif		\
	invisible.png 		\
	pitivi-advanced-16.png	\
	pitivi-advanced-22.png	\
	pitivi-advanced-24.png	\
	pitivi-group-24.svg  \
	pitivi-group.svg  \
	pitivi-keyframe-24.svg  \
	pitivi-keyframe.svg     \
	pitivi-relink-24.svg	\
	pitivi-relink.svg	\
	pitivi-render-16.png	\
	pitivi-render-22.png	\
	pitivi-render-24.png	\
	pitivi-split-24.svg	\
	pitivi-split.svg	\
	pitivi-ungroup-24.svg	\
	pitivi-ungroup.svg	\
	pitivi-align-24.svg	\
	pitivi-align.svg	\
	pitivi-unlink-24.svg	\
	pitivi-unlink.svg	\
	processing-clip.png	\
	processing-clip.svg	\
	trimbar-focused.png	\
	trimbar-normal.png \
    effects/agingtv.png \
    effects/bulge.png \
    effects/burn.png \
    effects/chromium.png \
    effects/circle.png \
    effects/cogdownsample.png \
    effects/color-distance.png \
    effects/coloreffects.png \
	effects/defaultthumbnail.svg \
    effects/dicetv.png \
    effects/diffuse.png \
    effects/dilate.png \
    effects/dodge.png \
    effects/edgetv.png \
    effects/exclusion.png \
    effects/fisheye.png \
    effects/frei0r-filter-3dflippo.png \
    effects/frei0r-filter-brightness.png \
    effects/frei0r-filter-bw0r.png \
    effects/frei0r-filter-cartoon.png \
    effects/frei0r-filter-contrast0r.png \
    effects/frei0r-filter-distort0r.png \
    effects/frei0r-filter-edgeglow.png \
    effects/frei0r-filter-equaliz0r.png \
    effects/frei0r-filter-flippo.png \
    effects/frei0r-filter-gamma.png \
    effects/frei0r-filter-glow.png \
    effects/frei0r-filter-hueshift0r.png \
    effects/frei0r-filter-invert0r.png \
    effects/frei0r-filter-k-means-clustering.png \
    effects/frei0r-filter-lens-correction.png \
    effects/frei0r-filter-letterb0xed.png \
    effects/frei0r-filter-nosync0r.png \
    effects/frei0r-filter-perspective.png \
    effects/frei0r-filter-pixeliz0r.png \
    effects/frei0r-filter-rgb-parade.png \
    effects/frei0r-filter-saturat0r.png \
    effects/frei0r-filter-scale0tilt.png \
    effects/frei0r-filter-scanline0r.png \
    effects/frei0r-filter-sobel.png \
    effects/frei0r-filter-squareblur.png \
    effects/frei0r-filter-tehroxx0r.png \
    effects/frei0r-filter-twolay0r.png \
    effects/frei0r-filter-vectorscope.png \
    effects/frei0r-filter-water.png \
    effects/frei0r-filter-white-balance.png \
    effects/gamma-correction.png \
    effects/gaussianblur.png \
    effects/kaleidoscope.png \
    effects/marble.png \
    effects/mirror.png \
    effects/optv.png \
    effects/pinch.png \
    effects/radioactv.png \
    effects/revtv.png \
    effects/shagadelictv.png \
    effects/solarize.png \
    effects/sphere.png \
    effects/square.png \
    effects/stretch.png \
    effects/threshold0r.png \
    effects/tunnel.png \
    effects/twirl.png


EXTRA_DIST = \
	$(pixmap_DATA)
