pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	pitivi-advanced-16.png	\
	pitivi-advanced-22.png	\
	pitivi-advanced-24.png	\
	pitivi-align-24.svg	\
	pitivi-group-24.svg  \
	pitivi-keyframe-24.svg  \
	pitivi-keyframe.svg     \
	pitivi-relink-24.svg	\
	pitivi-relink.svg	\
	pitivi-render-16.png	\
	pitivi-render-22.png	\
	pitivi-render-24.png	\
	pitivi-split-24.svg	\
	pitivi-ungroup-24.svg	\
	pitivi-unlink-24.svg	\
	pitivi-unlink.svg	\
	processing-clip.png	\
	processing-clip.svg	\
	trimbar-focused.png	\
	trimbar-normal.png \
    effects/agingtv.png \
    effects/bulge.png \
    effects/burn.png \
    effects/chromium.png \
    effects/circle.png \
    effects/cogdownsample.png \
    effects/color-distance.png \
    effects/coloreffects.png \
	effects/defaultthumbnail.svg \
    effects/dicetv.png \
    effects/diffuse.png \
    effects/dilate.png \
    effects/dodge.png \
    effects/edgetv.png \
    effects/exclusion.png \
    effects/fisheye.png \
    effects/frei0r-filter-3dflippo.png \
    effects/frei0r-filter-brightness.png \
    effects/frei0r-filter-bw0r.png \
    effects/frei0r-filter-cartoon.png \
    effects/frei0r-filter-contrast0r.png \
    effects/frei0r-filter-distort0r.png \
    effects/frei0r-filter-edgeglow.png \
    effects/frei0r-filter-equaliz0r.png \
    effects/frei0r-filter-flippo.png \
    effects/frei0r-filter-gamma.png \
    effects/frei0r-filter-glow.png \
    effects/frei0r-filter-hueshift0r.png \
    effects/frei0r-filter-invert0r.png \
    effects/frei0r-filter-k-means-clustering.png \
    effects/frei0r-filter-lens-correction.png \
    effects/frei0r-filter-letterb0xed.png \
    effects/frei0r-filter-nosync0r.png \
    effects/frei0r-filter-perspective.png \
    effects/frei0r-filter-pixeliz0r.png \
    effects/frei0r-filter-rgb-parade.png \
    effects/frei0r-filter-saturat0r.png \
    effects/frei0r-filter-scale0tilt.png \
    effects/frei0r-filter-scanline0r.png \
    effects/frei0r-filter-sobel.png \
    effects/frei0r-filter-squareblur.png \
    effects/frei0r-filter-tehroxx0r.png \
    effects/frei0r-filter-twolay0r.png \
    effects/frei0r-filter-vectorscope.png \
    effects/frei0r-filter-water.png \
    effects/frei0r-filter-white-balance.png \
    effects/gamma-correction.png \
    effects/gaussianblur.png \
    effects/kaleidoscope.png \
    effects/marble.png \
    effects/mirror.png \
    effects/optv.png \
    effects/pinch.png \
    effects/radioactv.png \
    effects/revtv.png \
    effects/shagadelictv.png \
    effects/solarize.png \
    effects/sphere.png \
    effects/square.png \
    effects/stretch.png \
    effects/threshold0r.png \
    effects/tunnel.png \
    effects/twirl.png \
    transitions/barndoor-dtl.png \
    transitions/barndoor-h.png \
    transitions/barndoor-v.png \
    transitions/barnvee-d.png \
    transitions/barnvee-l.png \
    transitions/barnvee-r.png \
    transitions/barnvee-u.png \
    transitions/bar-wipe-lr.png \
    transitions/bar-wipe-tb.png \
    transitions/bowtie-h.png \
    transitions/bowtie-v.png \
    transitions/box-wipe-bc.png \
    transitions/box-wipe-bl.png \
    transitions/box-wipe-br.png \
    transitions/box-wipe-lc.png \
    transitions/box-wipe-rc.png \
    transitions/box-wipe-tc.png \
    transitions/box-wipe-tl.png \
    transitions/box-wipe-tr.png \
    transitions/clock-cw12.png \
    transitions/clock-cw3.png \
    transitions/clock-cw6.png \
    transitions/clock-cw9.png \
    transitions/crossfade.png \
    transitions/diagonal-tl.png \
    transitions/diagonal-tr.png \
    transitions/doublefan-fih.png \
    transitions/doublefan-fiv.png \
    transitions/doublefan-foh.png \
    transitions/doublefan-fov.png \
    transitions/doublesweep-oh.png \
    transitions/doublesweep-ov.png \
    transitions/doublesweep-pdbl.png \
    transitions/doublesweep-pd.png \
    transitions/doublesweep-pdtl.png \
    transitions/doublesweep-pv.png \
    transitions/fan-b.png \
    transitions/fan-cr.png \
    transitions/fan-ct.png \
    transitions/fan-l.png \
    transitions/fan-r.png \
    transitions/fan-t.png \
    transitions/four-box-wipe-ci.png \
    transitions/four-box-wipe-co.png \
    transitions/iris-rect.png \
    transitions/misc-diagonal-dbd.png \
    transitions/misc-diagonal-dd.png \
    transitions/pinwheel-fb.png \
    transitions/pinwheel-tbh.png \
    transitions/pinwheel-tbv.png \
    transitions/saloondoor-b.png \
    transitions/saloondoor-l.png \
    transitions/saloondoor-r.png \
    transitions/saloondoor-t.png \
    transitions/singlesweep-cwbl.png \
    transitions/singlesweep-cwb.png \
    transitions/singlesweep-cwbr.png \
    transitions/singlesweep-cwl.png \
    transitions/singlesweep-cwr.png \
    transitions/singlesweep-cwtl.png \
    transitions/singlesweep-cwt.png \
    transitions/singlesweep-cwtr.png \
    transitions/vee-d.png \
    transitions/vee-l.png \
    transitions/vee-r.png \
    transitions/vee-u.png \
    transitions/windshield-h.png \
    transitions/windshield-r.png \
    transitions/windshield-u.png \
    transitions/windshield-v.png

EXTRA_DIST = \
	$(pixmap_DATA)
