uidir = $(pkgdatadir)/ui
ui_DATA = \
	alignmentprogress.ui \
	clipmediaprops.ui \
	cliptransformation.ui \
	depsmanager.ui \
	effectslibrary.ui \
	elementsettingsdialog.ui \
	filelisterrordialog.ui \
	mainmenubutton.ui \
	medialibrary.ui \
	preferences.ui \
	projectsettings.ui \
	renderingdialog.ui \
	renderingprogress.ui \
	startupwizard.ui \
	timelinetoolbar.ui \
	titleeditor.ui \
	$(NULL)

EXTRA_DIST = \
	$(ui_DATA)
