pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	busy.gif		\
	pitivi-advanced-16.png	\
	pitivi-advanced-22.png	\
	pitivi-advanced-24.png	\
	pitivi-relink.svg	\
	pitivi-render-16.png	\
	pitivi-render-22.png	\
	pitivi-render-24.png	\
	pitivi-sound.png	\
	pitivi-split.svg	\
	pitivi-unlink.svg	\
	pitivi-video.png

EXTRA_DIST = \
	$(pixmap_DATA)