pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	busy.gif		\
	invisible.png 		\
	pitivi-advanced-16.png	\
	pitivi-advanced-22.png	\
	pitivi-advanced-24.png	\
	pitivi-keyframe-24.svg  \
	pitivi-keyframe.svg     \
	pitivi-relink-24.svg	\
	pitivi-relink.svg	\
	pitivi-render-16.png	\
	pitivi-render-22.png	\
	pitivi-render-24.png	\
	pitivi-sound.png	\
	pitivi-split-24.svg	\
	pitivi-split.svg	\
	pitivi-unlink-24.svg	\
	pitivi-unlink.svg	\
	pitivi-video.png	\
	processing-clip.png	\
	processing-clip.svg	\
	trimbar-focused.png	\
	trimbar-normal.png

EXTRA_DIST = \
	$(pixmap_DATA)
