uidir = $(libdir)/pitivi/python/pitivi/ui

ui_PYTHON =			\
	__init__.py		\
	alignmentprogress.py    \
	controller.py		\
	curve.py		\
	depsmanager.py	\
	dynamic.py		\
	encodingdialog.py	\
	encodingprogress.py	\
	filelisterrordialog.py	\
	gstwidget.py		\
	mainwindow.py		\
	pathwalker.py		\
	point.py		\
	prefs.py		\
	preset.py		\
	previewer.py		\
	preview.py		\
	projectsettings.py	\
	ripple_update_group.py	\
	basetabs.py		\
	ruler.py		\
	startupwizard.py 	\
	timelinecanvas.py	\
	timelinecontrols.py	\
	timeline.py		\
	trackobject.py		\
	track.py		\
	viewer.py		\
	view.py			\
	effectlist.py	\
	clipproperties.py	\
	effectsconfiguration.py	\
	filechooserpreview.py	\
	zoominterface.py

clean-local:
	rm -rf *.pyc *.pyo
