uidir = $(libdir)/pitivi/python/pitivi/ui

ui_PYTHON =			\
	__init__.py		\
	alignmentprogress.py    \
	curve.py		\
	depsmanager.py	\
	filelisterrordialog.py	\
	mainwindow.py		\
	prefs.py		\
	preset.py		\
	previewer.py		\
	preview.py		\
	projectsettings.py	\
	basetabs.py		\
	ruler.py		\
	startupwizard.py 	\
	timelinecanvas.py	\
	timelinecontrols.py	\
	timeline.py		\
	trackobject.py		\
	track.py		\
	viewer.py		\
	clipproperties.py	\
	filechooserpreview.py

clean-local:
	rm -rf *.pyc *.pyo
