uidir = $(libdir)/pitivi/python/pitivi/ui

ui_PYTHON =			\
	__init__.py		\
	alignmentprogress.py    \
	depsmanager.py	\
	filelisterrordialog.py	\
	mainwindow.py		\
	prefs.py		\
	preset.py		\
	preview.py		\
	basetabs.py		\
	startupwizard.py 	\
	viewer.py		\
	clipproperties.py	\
	filechooserpreview.py

clean-local:
	rm -rf *.pyc *.pyo
