utilsdir = $(libdir)/pitivi/python/pitivi/utils

utils_PYTHON = 	\
	__init__.py	    \
	align.py        \
	alignalgs.py    \
	extract.py      \
	timeline.py     \
	loggable.py     \
	playback.py     \
	signal.py       \
	ui.py           \
	system.py       \
	threads.py      \
	receiver.py     \
	ripple_update_group.py	\
	misc.py         \
	widgets.py

clean-local:
	rm -rf *.pyc *.pyo
