utilsdir = $(libdir)/pitivi/python/pitivi/utils

utils_PYTHON = 	\
	__init__.py	    \
	extract.py      \
	timeline.py     \
	loggable.py     \
	pipeline.py     \
	ui.py           \
	system.py       \
	threads.py      \
	ripple_update_group.py	\
	misc.py         \
	validate.py     \
	proxy.py     \
	widgets.py

clean-local:
	rm -rf *.pyc *.pyo
